# Pathify

./: .gitignore  README.md  RU.md  pyproject.toml
examples/: default_router.py
examples/routers/: get.py  post.py
examples/routers/user/[id]/: get.py  post.py
pathify/: __init__.py  application.py
